Fix viewport not fully visible on Safari iOS - 2

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -22,7 +22,7 @@ html {
     @apply flex w-full overflow-hidden border max-w-[100vw];
     height: 100vh; 
     min-height: 100vh;
-    height: -webkit-fill-available; 
+    height: 100dvh;
 }
 
 /* Sidebar */
